package main.java.client.gui.azioniRistoratore;

import main.java.client.gui.TemplateGUI;

import javax.swing.*;

public class GestioneRistorantiGUI extends TemplateGUI {

    public GestioneRistorantiGUI(JFrame frame) {
        super(frame);
        this.frame = frame;
    }
}
