package main.java.client.gui.liste;

import main.java.client.gui.TemplateGUI;

import javax.swing.*;

public class ListaRecensioniGUI extends TemplateGUI {

    public ListaRecensioniGUI(JFrame frame) {
        super(frame);
        this.frame = frame;
    }
}
