@startuml Client_Class_GUI
skinparam classAttributeIconSize 0
skinparam linetype ortho

class TemplateGUI <<boundary>> {
  # frame: JFrame
  # pannello: JPanel
  # visualizzaProfilo: JButton
}

package "azioniRistoratore" {
  class AggiungiRistoranteGUI <<boundary>> {
    + AggiungiRistoranteGUI(frame: JFrame)
  }
  class GestioneRistorantiGUI <<boundary>> {
    + GestioneRistorantiGUI(frame: JFrame)
  }
  class RispondiRecensioneGUI <<boundary>> {
    + RispondiRecensioneGUI(frame: JFrame)
  }
}

package "liste" {
  class ListaRistorantiGUI <<boundary>> {
    + ListaRistorantiGUI(frame: JFrame)
  }
  class ListaRecensioniGUI <<boundary>> {
    + ListaRecensioniGUI(frame: JFrame)
  }
}

package "ricerca" {
  class FiltriRicercaGUI <<boundary>> {
    + FiltriRicercaGUI(frame: JFrame)
  }
}

azioniRistoratore.AggiungiRistoranteGUI --|> TemplateGUI
azioniRistoratore.GestioneRistorantiGUI --|> TemplateGUI
azioniRistoratore.RispondiRecensioneGUI --|> TemplateGUI
liste.ListaRistorantiGUI --|> TemplateGUI
liste.ListaRecensioniGUI --|> TemplateGUI
ricerca.FiltriRicercaGUI --|> TemplateGUI

@enduml